--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -1,2 +1,10 @@
 [mod-setting-name]
-DrKains_StackMultiplier-basemultiplier=Stack Size Multiplier
+DrKains_StackMultiplier-baseStackMultiplier=Item Stack Size Multiplier
+DrKains_StackMultiplier-constructRobotStackMultiplier=Construct Robots Multiplier
+DrKains_StackMultiplier-logicRobotStackMultiplier=Logic Robot Multiplier
+
+
+[mod-setting-description]
+DrKains_StackMultiplier-baseStackMultiplier=Multiplier added to the stack size of each item.
+DrKains_StackMultiplier-constructRobotStackMultiplier=Payload multiplier for construction robots only.
+DrKains_StackMultiplier-logicRobotStackMultiplier=Payload multiplier for logic robots only.
