Configurable satellite stacking

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -2,9 +2,11 @@
 DrKains_StackMultiplier-baseStackMultiplier=Item Stack Size Multiplier
 DrKains_StackMultiplier-constructRobotStackMultiplier=Construct Robots Multiplier
 DrKains_StackMultiplier-logicRobotStackMultiplier=Logic Robot Multiplier
+DrKains_stackMultiplier-satelliteStacking=Stack Satellites
 
 
 [mod-setting-description]
 DrKains_StackMultiplier-baseStackMultiplier=Multiplier added to the stack size of each item.
 DrKains_StackMultiplier-constructRobotStackMultiplier=Payload multiplier for construction robots only.
 DrKains_StackMultiplier-logicRobotStackMultiplier=Payload multiplier for logic robots only.
+DrKains_stackMultiplier-satelliteStacking=Enable/Disable Satellite Stacking (can cause trouble with rockets)
