Add option to ignore all single stack items

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -2,11 +2,10 @@
 DrKains_StackMultiplier-baseStackMultiplier=Item Stack Size Multiplier
 DrKains_StackMultiplier-constructRobotStackMultiplier=Construct Robots Multiplier
 DrKains_StackMultiplier-logicRobotStackMultiplier=Logic Robot Multiplier
-DrKains_stackMultiplier-satelliteStacking=Stack Satellites
-
+DrKains_StackMultiplier-stackSingles=Stack single stack items (not recommended)
 
 [mod-setting-description]
 DrKains_StackMultiplier-baseStackMultiplier=Multiplier added to the stack size of each item.
 DrKains_StackMultiplier-constructRobotStackMultiplier=Payload multiplier for construction robots only.
 DrKains_StackMultiplier-logicRobotStackMultiplier=Payload multiplier for logic robots only.
-DrKains_stackMultiplier-satelliteStacking=Enable/Disable Satellite Stacking (can cause trouble with rockets)
+DrKains_StackMultiplier-stackSingles=Stack items that have a stack size of 1 (can cause problems)
